correct url overflow

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,6 +24,8 @@ $headerheight: 200px;
   max-width: 80%;
 }
 
+a {word-break: break-all;}
+
 /*body
 {
   display: flex;
